[package]
name = "shoppinglist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "3.0.0"
inline_colorization = "0.1.6"
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"]}
